[metadata]
name = laserpy
version = 0.1a
author = Eric Casteleijn
author-email = thisfred@gmail.com
home-page = https://github.com/thisfred/laserpy
description = A Language Server Protocol implementation for Python
long-description = file: README.md, CHANGELOG.md
license = Hippocratic Licence 2.1
license-file = LICENSE
platform = any
keywords = lsp, python, tools
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: POSIX
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Typing :: Typed

[options]
include_package_data = true
python_requires = >= 3.8
test_suite = tests
install_requires =
    libcst
tests_require =
    tox
package_dir=
    =src
packages=find:

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-coverage
dev =
    pre-commit
    twine
    wheel
lint =
    pre-commit

[bdist_wheel]
universal = false

[sdist]
formats = gztar
